--- a/OpenHone/Backend/src/main/resources/application.properties
+++ b/OpenHone/Backend/src/main/resources/application.properties
@@ -9,3 +9,6 @@ quarkus.datasource.max-size=8
 quarkus.datasource.min-size=2
 quarkus.datasource.username=root
 quarkus.datasource.password=Lucky@1992
+quarkus.hibernate-orm.database.generation=drop-and-create
+
+
