--- a/OpenHone/Backend/pom.xml
+++ b/OpenHone/Backend/pom.xml
@@ -57,6 +57,11 @@
       <artifactId>quarkus-jdbc-mysql</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-hibernate-orm-panache</artifactId>
+    </dependency>
+
 
 
 <!--    <dependency>-->
