--- a/OpenHone/Backend/pom.xml
+++ b/OpenHone/Backend/pom.xml
@@ -88,6 +88,12 @@
       <version>3.0.2</version>
       <scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>io.quarkus</groupId>
+          <artifactId>quarkus-core-deployment</artifactId>
+          <version>1.5.1.Final</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
   <build>
     <plugins>
