--- a/OpenHome/Backend/src/main/resources/application.properties
+++ b/OpenHome/Backend/src/main/resources/application.properties
@@ -11,4 +11,10 @@ quarkus.datasource.username=root
 quarkus.datasource.password=Lucky@1992
 quarkus.hibernate-orm.database.generation=drop-and-create
 
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:3000
+quarkus.http.cors.headers=X-Custom
+quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
+quarkus.http.cors.exposed-headers=Content-Disposition
+quarkus.http.cors.access-control-max-age=24H
 
