--- a/OpenHome/Backend/src/main/resources/application.properties
+++ b/OpenHome/Backend/src/main/resources/application.properties
@@ -13,7 +13,7 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:3000
-quarkus.http.cors.headers=X-Custom
+quarkus.http.cors.headers=accept, origin, authorization, content-type, x-requested-with, Access-Control-Allow-Headers
 quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
 quarkus.http.cors.exposed-headers=Content-Disposition
 quarkus.http.cors.access-control-max-age=24H
