added minor changes

--- a/OpenHome/Backend/src/main/resources/application.properties
+++ b/OpenHome/Backend/src/main/resources/application.properties
@@ -12,9 +12,9 @@ quarkus.datasource.password=Lucky@1992
 quarkus.hibernate-orm.database.generation=drop-and-create
 
 quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:3000
-quarkus.http.cors.headers=accept, origin, authorization, content-type, x-requested-with, Access-Control-Allow-Headers
-quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
-quarkus.http.cors.exposed-headers=Content-Disposition
-quarkus.http.cors.access-control-max-age=24H
+#quarkus.http.cors.origins=http://localhost:3000
+#quarkus.http.cors.headers=accept, origin, authorization, Content-Type, x-requested-with, Access-Control-Allow-Headers, Access-Control-Allow-Origin
+#quarkus.http.cors.methods=GET, POST, PUT, DELETE, OPTIONS
+#quarkus.http.cors.exposed-headers=Content-Disposition
+#quarkus.http.cors.access-control-max-age=24H
 
